Fiex bug extra padding from the right

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ html, body {
   position: relative;
 }
 .container {
+  overflow: hidden;
   position: absolute;
   display: flex;
   justify-content: space-around;
